# Hand-Game

./: .gitignore  README.md  handGame.cabal
app/: Ai.hs  Game.hs  Main.hs
