cabal-version:   3.0
name:            handGame
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable handGame
    import:           warnings
    main-is:          Main.hs
    other-modules:    Game
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
